# claudebot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  main.py  pyproject.toml
claudebot/: app.py  claude.py  settings.py  shell.py
claudebot/handlers/: claude_handlers.py  generic_handlers.py  git_handlers.py
claudebot/tools/: auth.py  bot.py  claude.py  context.py  json_models.py  logger.py  messages.py  scheduler.py  shell.py
